[gd_scene load_steps=5 format=3 uid="uid://cg1jg4d1hfoep"]

[ext_resource type="Script" path="res://menu/option_menu.gd" id="1_q6l8g"]
[ext_resource type="PackedScene" uid="uid://cd0nf5ydgsylp" path="res://menu/cursor.tscn" id="2_xj1hb"]
[ext_resource type="FontFile" uid="uid://cyv5okyo2hgew" path="res://assets/poco.ttf" id="3_kxy6g"]
[ext_resource type="Script" path="res://menu/menu_item.gd" id="4_060l5"]

[node name="OptionMenu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_q6l8g")

[node name="Cursor" parent="." instance=ExtResource("2_xj1hb")]
layout_mode = 1
grow_horizontal = 1
grow_vertical = 1
menu_object = NodePath("../HBoxContainer/MarginContainer/VBoxContainer")
cursor_offset = Vector2(32, 18)

[node name="HBoxContainer" type="HBoxContainer" parent="."]
layout_mode = 0
offset_right = 1280.0
offset_bottom = 152.0
alignment = 1

[node name="MarginContainer" type="MarginContainer" parent="HBoxContainer"]
layout_mode = 2
theme_override_constants/margin_left = 30

[node name="VBoxContainer" type="VBoxContainer" parent="HBoxContainer/MarginContainer"]
layout_mode = 2

[node name="Scaling" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kxy6g")
theme_override_font_sizes/font_size = 40
text = "Scaling"
script = ExtResource("4_060l5")

[node name="Fullscreen" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kxy6g")
theme_override_font_sizes/font_size = 40
text = "Fullscreen"
script = ExtResource("4_060l5")

[node name="Return" type="Label" parent="HBoxContainer/MarginContainer/VBoxContainer"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kxy6g")
theme_override_font_sizes/font_size = 40
text = "Return
"
script = ExtResource("4_060l5")

[node name="VBoxContainer2" type="VBoxContainer" parent="HBoxContainer"]
layout_mode = 2

[node name="ScalingValue" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kxy6g")
theme_override_font_sizes/font_size = 40
text = "1x
"

[node name="FullscreenValue" type="Label" parent="HBoxContainer/VBoxContainer2"]
layout_mode = 2
theme_override_fonts/font = ExtResource("3_kxy6g")
theme_override_font_sizes/font_size = 40
text = "yes"

[connection signal="selected" from="HBoxContainer/MarginContainer/VBoxContainer/Scaling" to="." method="_on_scaling_selected"]
[connection signal="selected" from="HBoxContainer/MarginContainer/VBoxContainer/Return" to="." method="_on_return_selected"]
